--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -10,21 +10,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textCapWords"
-        android:text="@string/hint_firstname"/>
+        android:hint="@string/hint_firstname"/>
 
     <EditText
         android:id="@+id/lastNameEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textCapWords"
-        android:text="@string/hint_lastname"/>
+        android:hint="@string/hint_lastname"/>
 
     <EditText
         android:id="@+id/emailEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
-        android:text="@string/hint_email"/>
+        android:hint="@string/hint_email"/>
 
     <Button
         android:id="@+id/userSubmitButton"
