cleanup and comments

--- a/app/src/main/res/layout/list_view_fragment.xml
+++ b/app/src/main/res/layout/list_view_fragment.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/create_user"
-        android:onClick="creatUser"/>
+        android:onClick="createUser"/>
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
